trunk/OldArchive/bff32faccde6d644a07da003609ec51e-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:5:26: error: type/value mismatch at argument 1 in template parameter list for 'template<class T> struct identity'
 struct seq : identity<seq>{};
                          ^
main.cpp:5:26: error:   expected a type, got 'seq'
